// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteHeader renders correctly with all nav links 1`] = `
.c8 {
  background: var(--color-button);
  border: none;
  border-radius: 4px;
  color: var(--color-button-text);
  cursor: pointer;
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.5;
  opacity: 1;
  padding: 0.75rem 1.25rem;
  transition: all 0.2s ease-in-out;
}

.c8:focus {
  outline: 2px solid var(--color-button);
  outline-offset: 2px;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c8:focus-visible {
  outline: 2px solid var(--color-button);
  outline-offset: 2px;
}

.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: calc(24px);
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c2 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c5 {
  display: flex;
  gap: 1rem;
  align-items: center;
}

.c3 {
  color: var(--color-highlight);
  font-size: 1rem;
  line-height: 1;
  text-decoration: none;
  transition: color 0.2s ease-in-out;
}

.c3:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 2px;
}

.c0 {
  background: var(--color-background);
  border-bottom: 1px solid transparent;
  box-shadow: none;
  left: 0;
  padding: 0.75rem 0;
  position: fixed;
  right: 0;
  top: 0;
  transition: border-color 0.3s ease,box-shadow 0.3s ease;
  width: 100%;
  z-index: 100;
}

.c4 {
  color: var(--color-headline);
  cursor: pointer;
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.25rem;
  font-weight: 700;
  text-decoration: none;
}

.c6 {
  align-items: center;
  display: none;
  gap: 2rem;
}

.c7 {
  padding-bottom: 2px;
  position: relative;
}

.c7::after {
  background: var(--color-highlight);
  bottom: -4px;
  content: '';
  height: 2px;
  left: 0;
  position: absolute;
  right: 0;
  transform: scaleX(0);
  transform-origin: left;
  transition: transform 0.25s ease;
}

.c9 {
  align-items: center;
  background: none;
  border: 1px solid color-mix(in srgb, var(--color-headline) 20%, transparent);
  border-radius: 4px;
  color: var(--color-headline);
  cursor: pointer;
  display: flex;
  font-size: 0.75rem;
  font-weight: 700;
  justify-content: center;
  letter-spacing: 0.08em;
  min-height: 44px;
  min-width: 44px;
  padding: 0.25rem 0.625rem;
  text-transform: uppercase;
  transition: all 0.2s ease;
}

.c9:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

@media (hover: hover) {
  .c8:hover {
    opacity: 0.8;
  }
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (hover: hover) {
  .c3:hover {
    color: var(--color-tertiary);
  }
}

@media (min-width: 900px) {
  .c6 {
    display: flex;
  }
}

@media (hover: hover) {
  .c7:hover::after {
    transform: scaleX(1);
  }
}

@media (hover: hover) {
  .c9:hover {
    background: color-mix(         in srgb,         var(--color-headline) 5%,         transparent       );
    border-color: color-mix(         in srgb,         var(--color-headline) 40%,         transparent       );
  }
}

<div>
  <header
    class="c0"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <a
          class="c3 c4"
          href="/"
        >
          Andrea Agostini
        </a>
        <div
          class="c5"
        >
          <nav
            aria-label="Main navigation"
            class="c6"
          >
            <a
              class="c3 c7"
              href="#projects"
            >
              Projects
            </a>
            <a
              class="c3 c7"
              href="#skills"
            >
              Skills
            </a>
            <a
              class="c3 c7"
              href="#experience"
            >
              Experience
            </a>
            <a
              class="c3 c7"
              href="#contact"
            >
              Contact
            </a>
          </nav>
          <button
            aria-disabled="false"
            aria-label="Switch to Italian"
            class="c8 c9"
            type="button"
          >
            IT
          </button>
        </div>
      </div>
    </section>
  </header>
</div>
`;

exports[`SiteHeader renders correctly with no nav links 1`] = `
.c7 {
  background: var(--color-button);
  border: none;
  border-radius: 4px;
  color: var(--color-button-text);
  cursor: pointer;
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.5;
  opacity: 1;
  padding: 0.75rem 1.25rem;
  transition: all 0.2s ease-in-out;
}

.c7:focus {
  outline: 2px solid var(--color-button);
  outline-offset: 2px;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c7:focus-visible {
  outline: 2px solid var(--color-button);
  outline-offset: 2px;
}

.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: calc(24px);
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c2 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c5 {
  display: flex;
  gap: 1rem;
  align-items: center;
}

.c3 {
  color: var(--color-highlight);
  font-size: 1rem;
  line-height: 1;
  text-decoration: none;
  transition: color 0.2s ease-in-out;
}

.c3:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 2px;
}

.c0 {
  background: var(--color-background);
  border-bottom: 1px solid transparent;
  box-shadow: none;
  left: 0;
  padding: 0.75rem 0;
  position: fixed;
  right: 0;
  top: 0;
  transition: border-color 0.3s ease,box-shadow 0.3s ease;
  width: 100%;
  z-index: 100;
}

.c4 {
  color: var(--color-headline);
  cursor: pointer;
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.25rem;
  font-weight: 700;
  text-decoration: none;
}

.c6 {
  align-items: center;
  display: none;
  gap: 2rem;
}

.c8 {
  align-items: center;
  background: none;
  border: 1px solid color-mix(in srgb, var(--color-headline) 20%, transparent);
  border-radius: 4px;
  color: var(--color-headline);
  cursor: pointer;
  display: flex;
  font-size: 0.75rem;
  font-weight: 700;
  justify-content: center;
  letter-spacing: 0.08em;
  min-height: 44px;
  min-width: 44px;
  padding: 0.25rem 0.625rem;
  text-transform: uppercase;
  transition: all 0.2s ease;
}

.c8:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

@media (hover: hover) {
  .c7:hover {
    opacity: 0.8;
  }
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (hover: hover) {
  .c3:hover {
    color: var(--color-tertiary);
  }
}

@media (min-width: 900px) {
  .c6 {
    display: flex;
  }
}

@media (hover: hover) {
  .c8:hover {
    background: color-mix(         in srgb,         var(--color-headline) 5%,         transparent       );
    border-color: color-mix(         in srgb,         var(--color-headline) 40%,         transparent       );
  }
}

<div>
  <header
    class="c0"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <a
          class="c3 c4"
          href="/"
        >
          AA
        </a>
        <div
          class="c5"
        >
          <nav
            aria-label="Main navigation"
            class="c6"
          />
          <button
            aria-disabled="false"
            aria-label="Switch to Italian"
            class="c7 c8"
            type="button"
          >
            IT
          </button>
        </div>
      </div>
    </section>
  </header>
</div>
`;
